# pid-file-checker

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
pid_file_checker/: checker.py
tests/: conftest.py  test_pid_file_checker.py
